Resolving comments